# toku-superhero-simulation

./: .prospector.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: validation.yml
simulation/apps/characters/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
simulation/apps/characters/migrations/: 0001_initial.py  0002_alter_character_attack_alter_character_combat_and_more.py  0003_create_periodic_sync_task.py
simulation/apps/fights/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
simulation/apps/fights/migrations/: 0001_initial.py
simulation/apps/metrics/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
simulation/apps/metrics/migrations/: 0001_initial.py
simulation/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
simulation/config/develop/: settings.py  urls.py
